# terraform-transform

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
examples/: Makefile
examples/terraform/: .gitignore  Makefile  README.md
examples/terraform-moved/: Makefile  README.md  terraform.tfstate.backup
examples/terragrunt/: .gitignore  Makefile  terraform.tf-stage1  terraform.tf-stage2  terragrunt.hcl  tftf.sh  transformations.json
examples/terragrunt-moved/: Makefile  generate-moved.sh  terragrunt.hcl
terraform_transform/: __init__.py  tftf.py  transform.py
terraform_transform/tests/: dns-plan-pretty-labd.json  dns-plan-pretty.json  test_tftf.py
tests/: test_tftf.py
tftf/: __init__.py  tftf.py
tftf/tests/: test_tftf.py
