[tool.poetry]
name = "terraform-transform"
version = "0.2.1"
description = ""
authors = ["Simon McCartney <smccartney@axon.com>"]
readme = "README.md"
homepage = "https://git.taservs.net/ops/terraform-transform"
repository = "https://git.taservs.net/ops/terraform-transform"

[[tool.poetry.source]]
# proxy all package requests through the Nexus pypi-all group repo
# pypi-all  - group repo
# pypi-proxy - vanilla caching proxy repo
# pypy-all - our internally hosted python repo
name = "nexus"
url = "https://nexus.taservs.net/repository/pypi-all/"

[tool.poetry.scripts]
tf-tf = "terraform_transform.tftf:cli"

[tool.poetry.dependencies]
python = "^3.8"
jmespath = "^0.10.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
mypy = "^0.910"
isort = "^5.10.1"
flake8-bugbear = "^21.11.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
